<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:autofillHints="" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ecommerce" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aclonica"
            android:rotation="10"
            android:text="@string/_30_discount"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_item"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/mobile"
        android:contentDescription="@string/todo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_peice"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_below="@id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
             android:text="@string/ziro"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_below="@id/textView2"
            android:layout_toRightOf="@id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/valuta"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@id/priceTextView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_toRightOf="@id/textView2"
            android:layout_marginStart="165dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@id/textView2" />

        <Button
            android:id="@+id/minus_button"
            android:onClick="decreaseQuantity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/textView5"
            android:textColor="@android:color/white"
            android:text="@string/minus_sign"
            android:background="@android:color/black"
            android:layout_marginStart="240dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="160dp"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_below="@id/textView2"
            android:layout_toRightOf="@id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/ziro"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@id/minus_button" />

        <Button
            android:id="@+id/plus_button"
            android:onClick="increaseQuantity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/minus_button"
            android:layout_below="@id/textView5"
            android:textColor="@android:color/white"
            android:text="@string/plus_sign"
            android:background="@android:color/black"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_toEndOf="@id/minus_button" />


    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:onClick="addToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_green_dark"
        android:layout_marginTop="40dp"
        />


</LinearLayout>